# Anveshika

./: .gitignore  LICENSE  README.md  arm_data.csv  driving_data.csv  imu_readings.csv
Anveshika_ws/eYs3D/cfg/: ModeConfig.db  SWPP.cfg  libeYs3D.log.config  libeYs3D_win.log.config
Anveshika_ws/eYs3D/cfg/DM_Quality_Cfg/: DEFAULT_DM_Quality_Register_Setting.cfg  EX8036_DM_Quality_Register_Setting.cfg  EX8037_DM_Quality_Register_Setting.cfg  (+20 more)
Anveshika_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Anveshika_ws/log/: latest_build  latest_list
Anveshika_ws/src/anveshika_detection/: setup.py
Anveshika_ws/src/slam_lidar/: setup.py
anveshika_bringup/: CMakeLists.txt  package.xml
anveshika_bringup/launch/: anveshika_gz.launch.py
anveshika_bringup/params/: anveshika_gz_bridge.yaml
anveshika_bringup/rviz/: gz_config.rviz
anveshika_description/: CMakeLists.txt
anveshika_description/launch/: display.launch.py
anveshika_description/meshes/rover/: physical_properties.txt
anveshika_description/scripts/: xacro2sdf.bash  xacro2sdf_direct.bash  xacro2urdf.bash
anveshika_description/urdf/: anveshika.urdf  anveshika.urdf.xacro  d435i.gazebo.xacro  d435i.xacro  gazebo.xacro  lidar.xacro  model.config  model.sdf  rover.xacro
anveshika_slam/: CMakeLists.txt  package.xml
anveshika_slam/config/: config.yaml
anveshika_slam/include/anveshika_slam/: lio.hpp  octomap_mapper.hpp  pose_graph.hpp  sensor_interface.hpp  vio.hpp
anveshika_slam/launch/: anveshika_slam.launch.py
anveshika_slam/src/: anveshika_slam.cpp  lio.cpp  main.cpp  octomap_mapper.cpp  pose_graph.cpp  sensor_interface.cpp  vio.cpp
slam_lidar/slam_lidar/: driving_node.py
(+305 files in other folders)
